syntax = "proto2";
package GetGlobalState;
option java_package = "com.futu.openapi.pb";

import "Common.proto";
import "Qot_Common.proto";


message C2S
{
	required uint64 userID = 1; //需要跟FutuOpenD登陆的牛牛用户ID一致，否则会返回失败
}

message S2C
{
	required int32 marketHK = 1; //Qot_Common.QotMarketState,港股主板市场状态 
	required int32 marketUS = 2; //Qot_Common.QotMarketState,美股Nasdaq市场状态 
	required int32 marketSH = 3; //Qot_Common.QotMarketState,沪市状态 
	required int32 marketSZ = 4; //Qot_Common.QotMarketState,深市状态 
	required int32 marketHKFuture = 5; 	//Qot_Common.QotMarketState,港股期货市场状态 
	required bool qotLogined = 6; //是否登陆行情服务器
	required bool trdLogined = 7; //是否登陆交易服务器
	required int32 serverVer = 8; //版本号
	required int32 serverBuildNo = 9; //buildNo
	required int64 time = 10; //当前服务器时间
	optional double localTime = 11; //当前本地时间
	optional Common.ProgramStatus programStatus = 12; //当前程序状态
	optional string qotSvrIpAddr = 13;
	optional string trdSvrIpAddr = 14;
}

message Request
{
	required C2S c2s = 1;
}

message Response
{
	required int32 retType = 1 [default = -400]; //RetType,返回结果
	optional string retMsg = 2;
	optional int32 errCode = 3;
	
	optional S2C s2c = 4;
}
